<resources>
    <string name="app_name">AILE APPAREL</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="get_started">Let\'s Get Started</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title">BAHAN TERBAIK UNTUK\nTIM JUARA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="katalog">Katalog</string>
    <string name="view_all">Lihat Semua</string>
    <string name="description">Description</string>
    <string name="order_online">Order Online</string>
    <string name="cek_katalog">Cek Katalog</string>
    <string name="pilih_paket">Pilih Paket</string>
    <string name="create_account">Create Account</string>
    <string name="create_desc">Create a new account</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="havent_account">Belum punya akun?</string>
    <string name="silahkan_masuk">Silahkan masuk</string>
    <string name="silahkan_daftar">Silahkan daftar</string>
    <string name="sign_here">disini</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="enter_your_number">Masukkan nomor handphone anda\nuntuk menerima OTP</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="to_our_passion">To Our Passion</string>
    <string name="custom_jersey">Custom Jersey and Apparel</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="reset_title">Reset Your Password</string>
    <string name="reset_desc">Masukkan email anda pada\nkolom dibawah ini.</string>
    <string name="send_email">Send Email</string>
    <string name="follow_us">Follow Us</string>
    <string name="feedback">Beri Masukan</string>
    <string name="data_pemesan">Data Pemesan</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="detail_pesanan">Detail Pesanan</string>
    <string name="jumlah_pesanan">Jumlah Pesanan</string>
    <string name="detail_ukuran">Detail Ukuran</string>
    <string name="ukuran_lainnya">Ukuran Lainnya</string>
    <string name="upload_design">Upload Design Jersey</string>
    <string name="catatan">Catatan</string>
    <string name="order_now">Order Now</string>
    <string name="pilih_paket_jersey">Pilih Paket Jersey</string>
    <string name="pilih_font">Pilih Font</string>
    <string name="kirim_masukkan">Kirim Masukkan</string>
    <string name="tata_cara_roder">Cara Order Jersey</string>
    <string name="text_how_to">1. Masuk ke menu Order Jersey.\n2. Pastikan sebelum anda order jersey, cek harga dan juga cek ukuran dan font agar tidak salah saat pemesanan.\n3. Jika sudah cek harga, ukuran dan font, klik \"Order Sekarang\" dan otomatis anda akan menuju aplikasi Whatsapp untuk melanjutkan pemesanan dengan pihak admin.</string>

</resources>
