<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGreyBackgroundPrimary"
        tools:context=".HomeActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_jersey"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginEnd="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/card_view_layout"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:background="@drawable/background_black_gradient_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/design_aile" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/to_our_passion"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <LinearLayout
                android:id="@+id/ll_order_jersey"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/white_background_corner"
                    android:padding="4dp"
                    android:src="@drawable/ic_order" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="Order\nJersey"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_how_to_order"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/white_background_corner"
                    android:padding="4dp"
                    android:src="@drawable/ic_faq" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="Cara\nOrder"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_feedback"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_marginRight="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/white_background_corner"
                    android:padding="4dp"
                    android:src="@drawable/ic_feedback" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="Kritik dan\nSaran"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_social_media"
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_sosmed"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/white_background_corner"
                    android:padding="4dp"
                    android:src="@drawable/ic_sosmed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:text="Social\nMedia"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/katalog"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <TextView
            android:id="@+id/tv_view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/view_all"
            android:textColor="@color/colorFontBlue"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/rv_jersey"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/custom_jersey"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>